@@ -3,6 +3,7 @@ aha (0.4.4-1) UNRELEASED; urgency=low
   * New upstream release
     + Fixes issues with underlined and inverse text
   * Fix lintian warning helper-templates-in-copyright
+  * Fix lintian warning debian-rules-missing-recommended-target
 
  -- Axel Beckert <abe@debian.org>  Wed, 31 Aug 2011 22:54:04 +0200
 
